small change to fix horizontal scroll on mobile

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -278,7 +278,7 @@ input, textarea, select, .uneditable-input {
 
   #about-title {
     margin-bottom: 40px;
-    width: 325px;
+    width: 300px;
     margin-left: auto;
     margin-right: auto;
 
@@ -337,7 +337,7 @@ input, textarea, select, .uneditable-input {
   background-color: #333333;
 
   h1 {
-    font-size: 4.8em;
+    font-size: 4.5em;
   }
 
   .contact-btn {
